# kalshi-research-assistant

./: CLAUDE.md  README.md  index.html  pyproject.toml  report.html  report.tex  requirements.txt  sitemap.xml
.claude/: personas.yaml
.claude/skills/: final_suggester.md  independent_researcher.md  market_ingestor.md  market_parser.md  mispricing_analyst.md  persona_recommender.md  probability_estimator.md  scenario_analyst.md
reports/: 25th-amendment.html  25th-amendment.tex  abraham-accords-saudi.html  abraham-accords-saudi.tex  aca-repeal.html  aca-repeal.tex  ai-pause.html  ai-pause.tex  china-llm.html  china-llm.tex  credit-rating.html  credit-rating.tex  daylight-savings.html  daylight-savings.tex  google-breakup.html  google-breakup.tex  google-scotus.html  h5n1-cases.html  h5n1-cases.tex  imf-recession.html  imf-recession.tex  kraken-ipo.html  kraken-ipo.tex  meta-ceo.html  meta-ceo.tex  nber-recession.html  nber-recession.tex  new-tariffs.html  new-tariffs.tex  nj-drones.html  nj-drones.tex  palestine-recognition.html  palestine-recognition.tex  panama-canal.html  panama-canal.tex  social-media-ban.html  social-media-ban.tex  tesla-gas-car.html  tesla-gas-car.tex  trump-moscow.tex  (+4 more)
src/: __init__.py  main.py
src/graph/: __init__.py  kalshi_api.py  latex_generator.py  nodes.py  state.py  validators.py  workflow.py
